--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "^4.6.1",
+    "@capacitor/core": "^4.6.1",
+    "@capacitor/ios": "^4.6.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
@@ -13,6 +16,7 @@
     "change-case": "^4.1.2",
     "common-tags": "^1.8.2",
     "debug": "^4.3.4",
+    "file-saver": "^2.0.5",
     "get-intrinsic": "^1.1.3",
     "lodash": "^4.17.21",
     "minimatch": "^5.1.1",
@@ -46,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@capacitor/cli": "^4.6.1"
   }
 }
